# hpc-workspace

./: .exrc  .gitignore  .gitlab-ci.yml  CMakeLists.txt  FeatureRequests.md  HOWTO  MIGRATION  Makefile.orig  ProjectHome.md  README  README.md  admin-guide.md  getyamlcpp.sh  prepare.sh  pyproject.toml  user-guide.md  ws.conf  ws.conf_full_sample  ws_private.conf
.github/workflows/: codeql.yml
contribs/: ws_prepare
contribs/completion/: ws_tools.sh
contribs/schemas/: hpc-workspace-config-v1_5.json
debian/: changelog  control  copyright  postinst  rules  watch
man/: ws_allocate.1  ws_extend.1  ws_find.1  ws_list.1  ws_register.1  ws_release.1  ws_restore.1  ws_send_ical.1
man/man1/: ws_allocate.1  ws_extend.1  ws_list.1  ws_register.1  ws_release.1  ws_restore.1  ws_share.1
old/: ws_allocate.cpp  ws_release.cpp
sbin/: ws_expirer  ws_restore  ws_validate_config
src/: Makefile  Makefile.orig  prefix.lua  ruh.cpp  ruh.h  ws.cpp  ws.h  ws_allocate.cpp  ws_allocate_n.cpp  ws_release.cpp  ws_release_n.cpp  ws_restore.cpp  ws_util.cpp  ws_util.h  wsdb.cpp  wsdb.h
testing/: README  README.md  TODO  Vagrantfile  Vagrantfile_ubu16  Vagrantfile_ubu18  prepare_and_run.sh  run_tests.sh
testing/centos7/: Vagrantfile
testing/input/: ws.conf.1  ws.conf.2
testing/rockylinux8/: Vagrantfile
testing/scripts/: cleanup_tests.sh  prepare_tests.sh
testing/tests/00-basic/: err.res  lsout1.res  lsout2.ref  out.res  test.sh
testing/tests/01-reuse/: err.res  test.sh
testing/tests/02-extend/: err.res  test.sh
testing/tests/03-release/: err.ref  err.res  ls.ref  out.res  test.sh
testing/tests/04-change-default/: lsout2.ref  test.sh
testing/tests/05-qualified-create-after-default-change/: test.sh
testing/tests/06-parameters/: err1.ref  err2.ref  err3.ref  err4.ref  err5.ref  test.sh
testing/tests/07-extend0/: err.res  out.res  test.sh
testing/tests/08-list/: out.ref  test.sh
